@@ -12,6 +12,8 @@ checkbox (0.16.9) UNRELEASED; urgency=low
     wireless device IDs(LP: #1211521)
   * checkbox:parsers:submission: Tests and fixes for architecture matching
     which was causing udevadm processing to fail on armhf. (LP: #1214123).
+  * checkbox/parsers/udevadm: Sent some uninteresting devices to the null
+    category, and other minor tweaks to device categorization (LP: #1211369)
 
  -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 09 Aug 2013 12:47:17 -0400
 
